# gestao_estoque

./: README.md  create_data.py  escrevendo_csv.py  importando_produtos.py  produtos_exportados-2023-04-23.xls  pyproject.toml  teste.ipynb
contrib/: .env  env_gen.py
fix/: produtos.csv  produtos.xls  produtos.xlsx  produtos_exportados.csv
gestao_estoque/: asgi.py  settings.py  urls.py  wsgi.py
gestao_estoque/core/: models.py  urls.py
gestao_estoque/core/static/css/: style.css
gestao_estoque/core/static/js/: estoque_admin.js  estoque_entrada.js  estoque_saida.js
gestao_estoque/core/templates/: base.html  index.html
gestao_estoque/estoque/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
gestao_estoque/estoque/migrations/: 0001_initial.py  0002_estoqueentrada_estoquesaida_and_more.py  0003_alter_estoque_funcionario_alter_estoque_movimento_and_more.py
gestao_estoque/estoque/templates/: estoque_detail.html  estoque_entrada_detail.html  estoque_entrada_form.html  estoque_entrada_list.html  estoque_list.html  estoque_saida_detail.html  estoque_saida_form.html  estoque_saida_list.html
gestao_estoque/produto/: admin.py  forms.py  models.py  urls.py  views.py
gestao_estoque/produto/actions/: export_xls.py  import_xls.py
gestao_estoque/produto/migrations/: 0001_initial.py  0002_alter_produto_ncm.py  0003_categoria_produto_categoria.py
gestao_estoque/produto/templates/: categoria_detail.html  categoria_form.html  categoria_list.html  produto_detail.html  produto_form.html  produto_import.html  produto_list.html
(+2 files in other folders)
