[tool.poetry]
name = "gestao-estoque"
version = "0.1.0"
description = ""
authors = ["John Costa <jooohn.elvis@hotmail.com>"]
readme = "README.md"
packages = [{include = "gestao_estoque"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
python-decouple = "^3.8"
django-widget-tweaks = "^1.4.12"
django-bootstrap-form = "^3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
